--- a/todo.html
+++ b/todo.html
@@ -14,8 +14,8 @@
         <input type="text" class="note">
         <button style="width: 80px; height: 21px; transform: translatey(1.8px);margin-top: 1px;">Ajouter</button>
     </div>
-    <div style="margin-top: 20px;">
-        <button class="item item1" style="border-bottom-left-radius: 20px; border-top-left-radius: 20px; border: 1px solid rgb(77,78,80); " >Toute</button>
+    <div class="bcontainers" style="margin-top: 20px;">
+        <button class="item item1 blue" style="border-bottom-left-radius: 20px; border-top-left-radius: 20px; border: 1px solid rgb(77,78,80); " >Toute</button>
         <button class="item item2" style="border: 1px solid rgb(77,78,80)">A faire</button>
         <button class="item item3" style="border-bottom-right-radius: 20px; border-top-right-radius: 20px ;border: 1px solid rgb(77,78,80); ">Faite</button>
     </div>
